Attempting to async loading the entrypoint.
R=tapted@chromium.org

Review URL: https://codereview.appspot.com/43090044

--- a/dart/sdk/lib/_internal/pub/app/Makefile
+++ b/dart/sdk/lib/_internal/pub/app/Makefile
@@ -7,9 +7,9 @@ app: build/app build/app/pubchrome.dart.js
 build/%.dart.js: ../lib/src/%.dart always
 	export PATH=$(DPATH):$$PATH; dart2js --suppress-hints --package-root=packages -o $@ $<
 
-packages:
+packages: always
 	export PATH=$(DPATH):$$PATH; pub get
-	tar Lc packages | (cd ../lib/src/app && tar x)
+	tar hc packages | (cd ../lib/src/app && tar x)
 	mv packages/browser packages/browser_symlink
 	mkdir packages/browser
 	(cd packages/browser_symlink && tar c .) | (cd packages/browser && tar x)
